@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-12-24"
+#define RUBY_RELEASE_DATE "2010-01-10"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20091224
-#define RUBY_PATCHLEVEL 248
+#define RUBY_RELEASE_CODE 20100110
+#define RUBY_PATCHLEVEL 249
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
-#define RUBY_RELEASE_YEAR 2009
-#define RUBY_RELEASE_MONTH 12
-#define RUBY_RELEASE_DAY 24
+#define RUBY_RELEASE_YEAR 2010
+#define RUBY_RELEASE_MONTH 1
+#define RUBY_RELEASE_DAY 10
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
